Versão 2 - Acrescentei o lorem

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     aaaaaaaa
+    <h1>Teste Git</h1>
+    <div style="background-color: aqua;">
+        <h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, exercitationem.
+            Obcaecati dolore tempore unde aut expedita beatae recusandae non tenetur iste! Veritatis
+            voluptate vero impedit. Delectus beatae nostrum ad officia.
+        </h2>
+    </div>
 </body>
 </html>
